fix(karrotframe): add z-index: 1 in left

--- a/packages/karrotframe/src/navigator/components/Navbar.scss
+++ b/packages/karrotframe/src/navigator/components/Navbar.scss
@@ -38,6 +38,7 @@
   display: flex;
   align-items: center;
   height: 100%;
+  z-index: 1;
 
   &:empty {
     display: none;
